feat: fix api digiflazz
